# fastapi-realtime-tasks

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/auth/: routes.py  schemas.py  service.py
app/celery_task/: task.py
app/core/: config.py  dependencies.py  security.py
app/database/: constant.py
app/database/asyncdb/: collections.py  core.py  models.py  mongo_handler.py
app/tasks/: routes.py  schemas.py  service.py
app/websockets/: manager.py  router.py
app/worker/: celer_worker.py
